# the library names to build
lib_LTLIBRARIES = libpca2.la

libpca2_la_LDFLAGS = -version-info 0:0:0 -no-undefined

# where to install the headers on the system
libpca2_ladir = $(includedir)

# the list of header files that belong to the library (to be installed later)
libpca2_la_HEADERS = \
libpca2/pca.hpp

# the sources to add to the library and to add to the source distribution
libpca2_la_SOURCES = \
pca.cpp
