# the library names to build
lib_LTLIBRARIES = libarmapca.la

libarmapca_la_LDFLAGS = -version-info 0:0:0 -no-undefined

# where to install the headers on the system
libarmapca_ladir = $(includedir)

# the list of header files that belong to the library (to be installed later)
libarmapca_la_HEADERS = \
armapca/pca.h

# the sources to add to the library and to add to the source distribution
libarmapca_la_SOURCES = \
pca.cpp
